@@ -1,3 +1,14 @@
+2024-11-26  Sam James  <sam@gentoo.org>
+
+	* dvi-draw.c (lseek,pow): remove () declarations, incompatible
+	with C23.
+	* gui/menu.c,
+	* gui/sfDraw.c,
+	* gui/sfDraw.h,
+	* gui/sfSelFile.c: avoid () decls.
+	https://tug.org/pipermail/tex-live/2024-November/050931.html
+	https://tug.org/pipermail/tex-live/2024-November/050930.html
+
 2023-02-02  Florian Weimer  <fweimer@redhat.com>
 
 	* m4/xdvi-func-setsid-in-fork.m4.c99-4: avoid implicit
